--- a/hw22/package.json
+++ b/hw22/package.json
@@ -11,10 +11,21 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-concat": "^2.6.1",
+    "gulp-inject": "^5.0.5",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemap": "^1.0.1",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "nanogallery2": "^2.4.2",
+    "jquery-ui": "^1.12.1"
+  }
 }
