--- a/homework 21/package.json
+++ b/homework 21/package.json
@@ -8,5 +8,11 @@
     "start": "node app"
   },
   "author": "Danylo Titenko <danuxa2009@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
+  }
 }
