--- a/hw22/package.json
+++ b/hw22/package.json
@@ -18,14 +18,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-inject": "^5.0.5",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemap": "^1.0.1",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "gulp-util": "^3.0.8",
     "jquery": "^3.4.1",
-    "nanogallery2": "^2.4.2",
-    "jquery-ui": "^1.12.1"
+    "nanogallery2": "^2.4.2"
   }
 }
